Bug 305708 - Amarok doesn't continue playing Audio CD tracks if they are intermixed with Local Collection tracks in playlist
Summary: Amarok doesn't continue playing Audio CD tracks if they are intermixed with L...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playback (other bugs)
Version First Reported In: 2.6.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on: 311446
Blocks:
  Show dependency treegraph
 
Reported: 2012-08-24 11:34 UTC by robert marshall
Modified: 2013-01-10 22:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments
playlist after restarting (12.58 KB, image/jpeg)
2012-08-24 16:20 UTC, robert marshall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description robert marshall 2012-08-24 11:34:45 UTC
I've recently added the ppa:kubuntu-ppa/backports repository so I could upgrade the gstreamer and vlc backends (so it may be a problem with an amarok dependency I didn't see the issue with 2.6 before this update). I was given the option of updating more kde packages which I accepted. Since then the playing of cds in amarok has resulted in a popup from Qapt Codec Search 'The following plugin is required: AUDIOCD protocol search' If I do a search, it attempts and doesn't find anything and repeats the message (and so on ad inf). At this point I'm unable to play any other tracks in my playlist (including ones not on the cd) and the only way out is to quite amarok and restart.

The discussion here looks maybe linked http://forum.kde.org/viewtopic.php?f=116&t=102537

If I stop amarok playing and then add cd tracks to the playlist and then start listening to the first cd track it plays correctly and the next one also plays. The bug appears to happen when it moves from the local collection to the cd
Comment 1 robert marshall 2012-08-24 11:37:36 UTC
Also in the QApt popup if you click 'no' it just repeats the popup which seems a little unexpected
Comment 2 Matěj Laitl 2012-08-24 14:08:28 UTC
I think this is a bug in how CD tracks are recreated from config on Amarok startup - I think it simply doesn't get that the tracks is a CD one and tries to access it as if it was a local file.

You can check it: if you click Edit Track Details - does the Collection field differ before quitting Amarok (e.g. when the song is just added to the playlist) and after it?

I would test it, but CD playback is currently somehow broken for me. :-(
Comment 3 Matěj Laitl 2012-08-24 14:10:05 UTC
Oh, it seems that I mistunderstood. Resetting to playback then.
Comment 4 robert marshall 2012-08-24 15:40:50 UTC
Would you like me to add a bug report on cd tracks which are in the playlist when you shut down amarok and then don't appear correctly when the app is re-started? at the moment can't find a similar one in the tracker
Comment 5 Matěj Laitl 2012-08-24 15:43:39 UTC
(In reply to comment #4)
> Would you like me to add a bug report on cd tracks which are in the playlist
> when you shut down amarok and then don't appear correctly when the app is
> re-started? at the moment can't find a similar one in the tracker

Define "appear correctly"
Comment 6 robert marshall 2012-08-24 16:20:14 UTC
Created attachment 73441 [details]
playlist after restarting

So the item is blank apart from a zero time.
The track details (before restart and after) are the same
audiocd:/5b109408/1?device=%2Fdev%2Fsr0
Comment 7 Myriam Schweingruber 2012-08-24 16:24:06 UTC
The tracks are greyed out because they are not available at that exact time, this is not a bug but normal behavior of the playlist.
Comment 8 Matěj Laitl 2012-08-24 16:29:32 UTC
(In reply to comment #6)
> Created attachment 73441 [details]
> playlist after restarting

Oh I see, please file it as a separate bug against Collections/CD. Copy the screen shot.

> So the item is blank apart from a zero time.
> The track details (before restart and after) are the same
> audiocd:/5b109408/1?device=%2Fdev%2Fsr0

You mean just the url, right? The Collection: changes from CD to None, right?

(In reply to comment #7)
> The tracks are greyed out because they are not available at that exact time,
> this is not a bug but normal behavior of the playlist.

This is not about greyed-out tracks, but about missing info from the CD track, which is a bug.
Comment 9 robert marshall 2012-08-24 17:06:19 UTC
Yes the URL; yes the Collection goes from 'Audio CD' to 'None'
The track will play but comes up with Unknown Artist, Unknown Album in the current track applet, it allows you to enter data in the track details dialog (which thankfully get ignored) and doesn't get scrobbled.

I'll file it.
Comment 10 Matěj Laitl 2013-01-05 14:24:41 UTC
Setting title accordingly.
Comment 11 Matěj Laitl 2013-01-05 14:27:39 UTC
Much likely depends on Amarok EngineController behaviour bug.
Comment 12 Matěj Laitl 2013-01-10 22:49:14 UTC
Resolved in commit http://commits.kde.org/amarok/090070dfe700 - why the hell commit hook didn't work here?