EngineController: various Audio CD playback fixes

BUGFIXES:
 * Various improvements that should result in more stable Audio CD
   playback.

Many things originally pointed out by Harald, our lord-president.

BUG: 305708
BUG: 308084
BUG: 311446
FIXED-IN: 2.7
DIGEST: Amarok resurrects Audio CD playback, at least with phonon-gstreamer